fix nav cut off

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -57,8 +57,6 @@
   margin: 0;
   font-weight: normal;
 }
-othing: grayscale;
-}
 
 body {
   min-height: 100vh;
@@ -84,4 +82,5 @@ body {
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smo
+  -moz-osx-font-smoothing: grayscale;
+}
